website/versioned_docs/version-0.0.4/api/core/core.component.md
---
id: version-0.0.4-core.component
title: Component class
hide_title: true
original_id: core.component
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Core API Overview](overview) &gt; [@adpt/core](./core.md) &gt; [Component](./core.component.md)

## Component class

<b>Signature:</b>

```typescript
export declare abstract class Component<Props extends object = {}, State extends object = {}> implements GenericInstanceMethods 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(props)](./core.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [cleanup](./core.component.cleanup.md) |  | <code>(this: this) =&gt; void</code> |  |
|  [dependsOn](./core.component.dependson.md) |  | <code>DependsOnMethod</code> |  |
|  [deployedWhen](./core.component.deployedwhen.md) |  | <code>DeployedWhenMethod</code> |  |
|  [deployInfo](./core.component.deployinfo.md) |  | <code>DeployInfo</code> |  |
|  [props](./core.component.props.md) |  | <code>Props &amp; Partial&lt;BuiltinProps&gt;</code> |  |
|  [state](./core.component.state.md) |  | <code>Readonly&lt;State&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [build(helpers)](./core.component.build.md) |  |  |
|  [initialState()](./core.component.initialstate.md) |  |  |
|  [ready(helpers)](./core.component.ready.md) |  |  |
|  [setState(stateUpdate)](./core.component.setstate.md) |  |  |
|  [status(observeForStatus, buildData)](./core.component.status.md) |  |  |
